Removed app_heading variable from emails

--- a/email_templates/forgot_password.html
+++ b/email_templates/forgot_password.html
@@ -46,7 +46,7 @@
         <p>Click <a href="{{link}}" target="_blank">here</a> to reset your password</p>
         <p>This link will expire in 15 minutes.</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity}</span></p>
     </div>
 </body>
 
