--- a/email_templates/new_account.html
+++ b/email_templates/new_account.html
@@ -46,7 +46,7 @@
         <p>If you would like to change any of your account settings please click <a href="{{link}}" target="_blank">here</a></p>
         <p>Happy shopping!</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity</span></p>
     </div>
 </body>
 
