--- a/email_templates/order_invoice.html
+++ b/email_templates/order_invoice.html
@@ -58,7 +58,7 @@
 <body>
     <div id="container">
         <h1 class="heading">
-            {{app_heading}}
+            Emporium Of Curiosity
         </h1>
         <h2 class="heading">Order #{{order_number}} Invoice</h2>
             <p>To: {{customer_name}}</p>
