--- a/email_templates/order_shipped.html
+++ b/email_templates/order_shipped.html
@@ -46,7 +46,7 @@
         <p>You should receive your order in the upcoming business days.</p>
         <p>Click <a href="{{link}}" target="_blank">here</a> to view your order.</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity</span></p>
     </div>
 </body>
 
