--- a/email_templates/changed_password.html
+++ b/email_templates/changed_password.html
@@ -45,7 +45,7 @@
         <p>This email serves as a confirmation that you have changed your account password through the customer portal</p>
         <p>If you did not do so please contact us immediately via {{support_email}}</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity</span></p>
     </div>
 </body>
 
