--- a/email_templates/order_confirmed.html
+++ b/email_templates/order_confirmed.html
@@ -47,7 +47,7 @@
         <p>Click <a href="{{link}}" target="_blank">here</a> to view your order.</p>
         <p>Thank you for shopping with us.</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity</span></p>
     </div>
 </body>
 
