--- a/email_templates/order_new.html
+++ b/email_templates/order_new.html
@@ -47,7 +47,7 @@
         <p>Attached to this email is your invoice for your purchase.</p>
         <p>Click <a href="{{link}}" target="_blank">here</a> to view your order.</p>
         <p>Kind Regards, </p>
-        <p><span>{{app_heading}}</span></p>
+        <p><span>Emporium Of Curiosity</span></p>
     </div>
 </body>
 
