Added support email to all emails Change links to domain name

--- a/email_templates/new_account.html
+++ b/email_templates/new_account.html
@@ -39,14 +39,15 @@
 <body>
     <div id="container">
         <h1 id="heading">
-            Welcome to {{app_heading}}
+            Welcome to Emporium Of Curiosity
         </h1>
         <p>Good day {{customer_name}}.</p>
-        <p>We at {{app_heading}} would like to thank you for creating an account with us.</p>
-        <p>If you would like to change any of your account settings please click <a href="{{link}}" target="_blank">here</a></p>
+        <p>We at Emporium Of Curiosity would like to thank you for creating an account with us.</p>
+        <p>If you would like to change any of your account settings please click <a href="https://www.shopemporium.co.za/customer" target="_blank">here</a></p>
         <p>Happy shopping!</p>
         <p>Kind Regards, </p>
         <p><span>Emporium Of Curiosity</span></p>
+        <p style="font-size: 14px; text-align: center; padding-top: 20px ;">Do not reply directly to this email. If you would like to contact us please send an email to <span>support@shopemporium.co.za</span></p>
     </div>
 </body>
 
