--- a/email_templates/order_confirmed.html
+++ b/email_templates/order_confirmed.html
@@ -44,10 +44,11 @@
         <p>Good day {{customer_name}}.</p>
         <p>This email serves as a confirmation of your order placed on <span>{{order_date}}.</span></p>
         <p>We will let you know as soon as your order has been shipped to: <span>{{shipping_address}}</span></p>
-        <p>Click <a href="{{link}}" target="_blank">here</a> to view your order.</p>
+        <p>Click <a href="https://www.shopemporium.co.za/order/{{order_number}}" target="_blank">here</a> to view your order.</p>
         <p>Thank you for shopping with us.</p>
         <p>Kind Regards, </p>
         <p><span>Emporium Of Curiosity</span></p>
+        <p style="font-size: 14px; text-align: center; padding-top: 20px ;">Do not reply directly to this email. If you would like to contact us please send an email to <span>support@shopemporium.co.za</span></p>
     </div>
 </body>
 
