--- a/email_templates/order_shipped.html
+++ b/email_templates/order_shipped.html
@@ -44,9 +44,10 @@
         <p>Good day {{customer_name}}.</p>
         <p>This email serves as a confirmation that the order placed on <span>{{order_date}}</span> has now been shipped to your address: <span>{{shipping_address}}</span></p>
         <p>You should receive your order in the upcoming business days.</p>
-        <p>Click <a href="{{link}}" target="_blank">here</a> to view your order.</p>
+        <p>Click <a href="https://www.shopemporium.co.za/order/{{order_id}}" target="_blank">here</a> to view your order.</p>
         <p>Kind Regards, </p>
         <p><span>Emporium Of Curiosity</span></p>
+        <p style="font-size: 14px; text-align: center; padding-top: 20px ;">Do not reply directly to this email. If you would like to contact us please send an email to <span>support@shopemporium.co.za</span></p>
     </div>
 </body>
 
